<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_small"
            android:importantForAccessibility="no" />
    </LinearLayout>

    <!-- Rewarded Video Layout -->
    <LinearLayout
        android:id="@+id/rewarded_video_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rewarded_video" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rewarded_video_load_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:background="@drawable/levelplay_button_shape"
                android:onClick="loadRewardedButtonTapped"
                android:text="@string/load"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/rewarded_video_show_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:onClick="showRewardedVideoButtonTapped"
                android:background="@drawable/levelplay_button_shape"
                android:text="@string/show"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Interstitial Layout -->
    <LinearLayout
        android:id="@+id/interstitial_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/interstitial" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/interstitial_load_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:background="@drawable/levelplay_button_shape"
                android:onClick="loadInterstitialButtonTapped"
                android:text="@string/load"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interstitial_show_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:onClick="showInterstitialButtonTapped"
                android:background="@drawable/levelplay_button_shape"
                android:text="@string/show"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Banner Layout -->
    <LinearLayout
        android:id="@+id/banner_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/banner_load_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"
                android:onClick="loadBannerButtonTapped"
                android:background="@drawable/levelplay_button_shape"
                android:text="@string/load"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- SDK Layout -->
    <LinearLayout
        android:id="@+id/sdk_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/version_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Banner View Layout -->
    <LinearLayout
        android:id="@+id/banner_view_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/banner_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>